# music_streamer

./: ArtistNode.cpp  ArtistNode.h  AvlTree.h  CMakeLists.txt  DoublyLL.h  MusicManager.cpp  MusicManager.h  README.md  SongCountNode.cpp  SongCountNode.h  SongNode.cpp  SongNode.h  avlTree_test.cpp  dry.docx  dry_new.docx  library1.cpp  out.txt  ~$dry.docx
